[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caseprocessor"
version = "0.0.1"

[tool.setuptools]
packages = ['caseprocessor', 'caseprocessor.dto', 'caseprocessor.util', 'caseprocessor.entity', 'caseprocessor.pseudorandom', 'caseprocessor.db', 'caseprocessor.service', 'caseprocessor.messaging', 'caseprocessor.logging', 'caseprocessor.validation']